--- a/WpfDependencyInjectionDummy/WpfDependencyInjectionDummy.csproj
+++ b/WpfDependencyInjectionDummy/WpfDependencyInjectionDummy.csproj
@@ -1,14 +1,14 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net5.0-windows</TargetFramework>
+    <TargetFramework>net6.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
-    <PackageReference Include="EvilBaschdi.Core" Version="2021.1.6.936" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0-rc.1.21451.13" />
+    <PackageReference Include="EvilBaschdi.Core" Version="2021.9.27.1934-develop" />
   </ItemGroup>
 
 </Project>
