--- a/DependencyInjectionChainDummy/DependencyInjectionChainDummy.csproj
+++ b/DependencyInjectionChainDummy/DependencyInjectionChainDummy.csproj
@@ -3,12 +3,15 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
-    <LangVersion>9</LangVersion>
+    <LangVersion>preview</LangVersion>
+	  <EnableNETAnalyzers>true</EnableNETAnalyzers>
+	  <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0-rc.1.21451.13" />
-    <PackageReference Include="EvilBaschdi.Core" Version="2021.10.11.609-develop" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
+    <PackageReference Include="EvilBaschdi.Core" Version="2022.11.29.1736-develop" />
+    <PackageReference Include="EvilBaschdi.DependencyInjection" Version="2022.12.8.740-develop" />
   </ItemGroup>
 
 </Project>
