M DependencyInjectionChainDummy/DependencyInjectionChainDummy.csproj  M DependencyInjectionChainDummy/Internal/ChainHelperFor.cs  M DependencyInjectionChainDummy/Internal/DemoClass.cs  M DependencyInjectionChainDummy/Internal/IChainHelperFor.cs  M DependencyInjectionChainDummy/Internal/IDemoInterface.cs  M DependencyInjectionChainDummy/Internal/IReturn.cs  M DependencyInjectionChainDummy/Internal/IValue.cs  M DependencyInjectionChainDummy/Internal/One.cs  M DependencyInjectionChainDummy/Internal/Return.cs  M DependencyInjectionChainDummy/Internal/Two.cs  M DependencyInjectionChainDummy/Program.cs  M MahAppsMetroDependencyInjectionDummy/App.xaml.cs  M MahAppsMetroDependencyInjectionDummy/MahAppsMetroDependencyInjectionDummy.csproj  M MahAppsMetroDependencyInjectionDummy/MainWindowViewModel.cs  M WpfDependencyInjectionDummy/WpfDependencyInjectionDummy.csproj  M global.json ?? DependencyInjectionChainDummy/ConfigureChain.cs ?? DependencyInjectionChainDummy/IConfigureChain.cs ?? DependencyInjectionChainDummy/Internal/INumber.cs ?? MahAppsMetroDependencyInjectionDummy/ISomeOtherInterface.cs ?? MahAppsMetroDependencyInjectionDummy/SomeOtherClass.cs

--- a/MahAppsMetroDependencyInjectionDummy/MahAppsMetroDependencyInjectionDummy.csproj
+++ b/MahAppsMetroDependencyInjectionDummy/MahAppsMetroDependencyInjectionDummy.csproj
@@ -1,17 +1,17 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net6.0-windows</TargetFramework>
+    <TargetFramework>net7.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
 	  <EnableNETAnalyzers>true</EnableNETAnalyzers>
 	  <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="EvilBaschdi.CoreExtended" Version="2023.2.1.1955-develop" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.0" />
+    <PackageReference Include="EvilBaschdi.Core.Wpf" Version="2023.2.20.2127-develop" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0-preview.1.23110.8" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0-preview.1.23110.8" />
     <PackageReference Include="WpfAnalyzers" Version="4.1.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
