--- a/DependencyInjectionChainDummy/DependencyInjectionChainDummy.csproj
+++ b/DependencyInjectionChainDummy/DependencyInjectionChainDummy.csproj
@@ -2,16 +2,16 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <LangVersion>preview</LangVersion>
 	  <EnableNETAnalyzers>true</EnableNETAnalyzers>
 	  <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
-    <PackageReference Include="EvilBaschdi.Core" Version="2023.2.1.1815-develop" />
-    <PackageReference Include="EvilBaschdi.DependencyInjection" Version="2023.2.1.1926-develop" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0-preview.1.23110.8" />
+    <PackageReference Include="EvilBaschdi.Core" Version="2023.2.21.1731" />
+    <PackageReference Include="EvilBaschdi.DependencyInjection" Version="2023.2.21.1751" />
   </ItemGroup>
 
 </Project>
