--- a/WpfDependencyInjectionDummy/WpfDependencyInjectionDummy.csproj
+++ b/WpfDependencyInjectionDummy/WpfDependencyInjectionDummy.csproj
@@ -1,16 +1,16 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<OutputType>WinExe</OutputType>
-		<TargetFramework>net6.0-windows</TargetFramework>
+		<TargetFramework>net7.0-windows</TargetFramework>
 		<UseWPF>true</UseWPF>
 		<EnableNETAnalyzers>true</EnableNETAnalyzers>
 		<ImplicitUsings>enable</ImplicitUsings>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
-		<PackageReference Include="EvilBaschdi.Core" Version="2023.2.1.1815-develop" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0-preview.1.23110.8" />
+		<PackageReference Include="EvilBaschdi.Core" Version="2023.2.21.1731" />
 	</ItemGroup>
 
 </Project>
