--- a/WpfDependencyInjectionDummy/WpfDependencyInjectionDummy.csproj
+++ b/WpfDependencyInjectionDummy/WpfDependencyInjectionDummy.csproj
@@ -2,15 +2,15 @@
 
 	<PropertyGroup>
 		<OutputType>WinExe</OutputType>
-		<TargetFramework>net7.0-windows</TargetFramework>
+		<TargetFramework>net8.0-windows</TargetFramework>
 		<UseWPF>true</UseWPF>
 		<EnableNETAnalyzers>true</EnableNETAnalyzers>
 		<ImplicitUsings>enable</ImplicitUsings>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0-preview.1.23110.8" />
-		<PackageReference Include="EvilBaschdi.Core" Version="2023.2.21.1731" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" />
+		<PackageReference Include="EvilBaschdi.Core" />
 	</ItemGroup>
 
 </Project>
